content/_generated-doc/3.27/config/quarkus-smallrye-graphql_quarkus.smallrye-graphql.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-root-path]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-root-path[`quarkus.smallrye-graphql.root-path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.root-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The rootPath under which queries will be served. Default to graphql By default, this value will be resolved as a path relative to `$++{++quarkus.http.root-path++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++graphql+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-federation-enabled]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-federation-enabled[`quarkus.smallrye-graphql.federation.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.federation.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable Apollo Federation. If this value is unspecified, then federation will be enabled automatically if any GraphQL Federation annotations are detected in the application.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_FEDERATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_FEDERATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-federation-batch-resolving-enabled]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-federation-batch-resolving-enabled[`quarkus.smallrye-graphql.federation.batch-resolving-enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.federation.batch-resolving-enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable batch resolving for federation. Disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_FEDERATION_BATCH_RESOLVING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_FEDERATION_BATCH_RESOLVING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-metrics-enabled]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-metrics-enabled[`quarkus.smallrye-graphql.metrics.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.metrics.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable metrics. By default, this is false. If set to true, a metrics extension is required.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-tracing-enabled]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-tracing-enabled[`quarkus.smallrye-graphql.tracing.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.tracing.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable tracing. By default, this will be enabled if the tracing extension is added.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_TRACING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_TRACING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-events-enabled]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-events-enabled[`quarkus.smallrye-graphql.events.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.events.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable eventing. Allow you to receive events on bootstrap and execution.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_EVENTS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_EVENTS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-nonblocking-enabled]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-nonblocking-enabled[`quarkus.smallrye-graphql.nonblocking.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.nonblocking.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable non-blocking support. Default is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_NONBLOCKING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_NONBLOCKING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-http-get-enabled]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-http-get-enabled[`quarkus.smallrye-graphql.http.get.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.http.get.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable GET Requests. Allow queries via HTTP GET.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_HTTP_GET_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_HTTP_GET_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-http-post-queryparameters-enabled]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-http-post-queryparameters-enabled[`quarkus.smallrye-graphql.http.post.queryparameters.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.http.post.queryparameters.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable Query parameter on POST Requests. Allow POST request to override or supply values in a query parameter.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_HTTP_POST_QUERYPARAMETERS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_HTTP_POST_QUERYPARAMETERS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-auto-name-strategy]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-auto-name-strategy[`quarkus.smallrye-graphql.auto-name-strategy`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.auto-name-strategy+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Change the type naming strategy. All possible strategies are: default, merge-inner-class, full


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_AUTO_NAME_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_AUTO_NAME_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++Default+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-error-extension-fields]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-error-extension-fields[`quarkus.smallrye-graphql.error-extension-fields`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.error-extension-fields+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
List of extension fields that should be included in the error response. By default, none will be included. Examples of valid values include ++[++exception,classification,code,description,validationErrorType,queryPath++]++


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_ERROR_EXTENSION_FIELDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_ERROR_EXTENSION_FIELDS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-default-error-message]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-default-error-message[`quarkus.smallrye-graphql.default-error-message`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.default-error-message+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The default error message that will be used for hidden exception messages. Defaults to "Server Error"


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_DEFAULT_ERROR_MESSAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_DEFAULT_ERROR_MESSAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-print-data-fetcher-exception]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-print-data-fetcher-exception[`quarkus.smallrye-graphql.print-data-fetcher-exception`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.print-data-fetcher-exception+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Print the data fetcher exception to the log file. Default `true` in dev and test mode, default `false` in prod.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PRINT_DATA_FETCHER_EXCEPTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PRINT_DATA_FETCHER_EXCEPTION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-available]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-available[`quarkus.smallrye-graphql.schema-available`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.schema-available+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Make the schema available over HTTP.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_AVAILABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_AVAILABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-include-scalars]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-include-scalars[`quarkus.smallrye-graphql.schema-include-scalars`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.schema-include-scalars+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Include the Scalar definitions in the schema.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_SCALARS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_SCALARS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-include-schema-definition]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-include-schema-definition[`quarkus.smallrye-graphql.schema-include-schema-definition`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.schema-include-schema-definition+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Include the schema internal definition in the schema.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_SCHEMA_DEFINITION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_SCHEMA_DEFINITION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-include-directives]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-include-directives[`quarkus.smallrye-graphql.schema-include-directives`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.schema-include-directives+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Include Directives in the schema.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_DIRECTIVES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_DIRECTIVES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-include-introspection-types]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-schema-include-introspection-types[`quarkus.smallrye-graphql.schema-include-introspection-types`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.schema-include-introspection-types+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Include Introspection Types in the schema.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_INTROSPECTION_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_INTROSPECTION_TYPES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-log-payload]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-log-payload[`quarkus.smallrye-graphql.log-payload`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.log-payload+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Log the payload (and optionally variables) to System out.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_LOG_PAYLOAD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_LOG_PAYLOAD+++`
endif::add-copy-button-to-env-var[]
--
a|`off`, `query-only`, `query-and-variables`
|`+++off+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-unwrap-exceptions]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-unwrap-exceptions[`quarkus.smallrye-graphql.unwrap-exceptions`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.unwrap-exceptions+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Exceptions that should be unwrapped (class names).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_UNWRAP_EXCEPTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_UNWRAP_EXCEPTIONS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-websocket-subprotocols]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-websocket-subprotocols[`quarkus.smallrye-graphql.websocket-subprotocols`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.websocket-subprotocols+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Subprotocols that should be supported by the server for graphql-over-websocket use cases. Allowed subprotocols are "graphql-ws" and "graphql-transport-ws". By default, both are enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_WEBSOCKET_SUBPROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_WEBSOCKET_SUBPROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-capture-ignored-chars]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-capture-ignored-chars[`quarkus.smallrye-graphql.parser-capture-ignored-chars`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.parser-capture-ignored-chars+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set to true if ignored chars should be captured as AST nodes. Default to false


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_IGNORED_CHARS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_IGNORED_CHARS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-capture-line-comments]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-capture-line-comments[`quarkus.smallrye-graphql.parser-capture-line-comments`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.parser-capture-line-comments+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set to true if `graphql.language.Comment`s should be captured as AST nodes


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_LINE_COMMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_LINE_COMMENTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-capture-source-location]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-capture-source-location[`quarkus.smallrye-graphql.parser-capture-source-location`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.parser-capture-source-location+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set to true true if `graphql.language.SourceLocation`s should be captured as AST nodes. Default to true


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_SOURCE_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_SOURCE_LOCATION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-max-tokens]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-max-tokens[`quarkus.smallrye-graphql.parser-max-tokens`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.parser-max-tokens+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum number of raw tokens the parser will accept, after which an exception will be thrown. Default to 15000


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_MAX_TOKENS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_MAX_TOKENS+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-max-whitespace-tokens]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-parser-max-whitespace-tokens[`quarkus.smallrye-graphql.parser-max-whitespace-tokens`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.parser-max-whitespace-tokens+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum number of raw whitespace tokens the parser will accept, after which an exception will be thrown. Default to 200000


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_MAX_WHITESPACE_TOKENS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_MAX_WHITESPACE_TOKENS+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-instrumentation-query-complexity]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-instrumentation-query-complexity[`quarkus.smallrye-graphql.instrumentation-query-complexity`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.instrumentation-query-complexity+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Abort a query if the total number of data fields queried exceeds the defined limit. Default to no limit


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_INSTRUMENTATION_QUERY_COMPLEXITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_INSTRUMENTATION_QUERY_COMPLEXITY+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-instrumentation-query-depth]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-instrumentation-query-depth[`quarkus.smallrye-graphql.instrumentation-query-depth`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.instrumentation-query-depth+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Abort a query if the total depth of the query exceeds the defined limit. Default to no limit


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_INSTRUMENTATION_QUERY_DEPTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_INSTRUMENTATION_QUERY_DEPTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-extra-scalars]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-extra-scalars[`quarkus.smallrye-graphql.extra-scalars`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.extra-scalars+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional scalars to register in the schema. These are taken from the `graphql-java-extended-scalars` library.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_EXTRA_SCALARS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_EXTRA_SCALARS+++`
endif::add-copy-button-to-env-var[]
--
a|list of tooltip:uuid[The UUID GraphQL type, represented as a java.util.UUID], tooltip:object[The Object GraphQL type, represented as a general java.lang.Object], tooltip:json[The JSON GraphQL type, represented as a jakarta.json.JsonObject]
|

a| [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-ui-enabled]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-ui-enabled[`quarkus.smallrye-graphql.ui.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.ui.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If GraphQL UI should be enabled. By default, GraphQL UI is enabled if it is included (see `always-include`).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_UI_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_UI_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-field-visibility]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-field-visibility[`quarkus.smallrye-graphql.field-visibility`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.field-visibility+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specifies the field visibility for the GraphQL schema. This configuration item allows you to define comma-separated list of patterns (GraphQLType.GraphQLField). These patterns are used to determine which fields should be excluded from the schema. Special value `no-introspection` will disable introspection fields. For more info see link:https://smallrye.io/smallrye-graphql/docs/schema/field-visibility[graphql-java documentation]


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_FIELD_VISIBILITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_FIELD_VISIBILITY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++default+++`

a| [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-exclude-null-fields-in-responses]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-exclude-null-fields-in-responses[`quarkus.smallrye-graphql.exclude-null-fields-in-responses`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.exclude-null-fields-in-responses+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Excludes all the 'null' fields in the GraphQL response's `data` field, except for the non-successfully resolved fields (errors). Disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_EXCLUDE_NULL_FIELDS_IN_RESPONSES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_EXCLUDE_NULL_FIELDS_IN_RESPONSES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-show-runtime-exception-message]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-show-runtime-exception-message[`quarkus.smallrye-graphql.show-runtime-exception-message`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.show-runtime-exception-message+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
List of Runtime Exceptions class names that should show the error message. By default, Runtime Exception messages will be hidden and a generic `Server Error` message will be returned.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SHOW_RUNTIME_EXCEPTION_MESSAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SHOW_RUNTIME_EXCEPTION_MESSAGE+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-hide-checked-exception-message]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-hide-checked-exception-message[`quarkus.smallrye-graphql.hide-checked-exception-message`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.hide-checked-exception-message+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
List of Checked Exceptions class names that should hide the error message. By default, Checked Exception messages will show the exception message.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_HIDE_CHECKED_EXCEPTION_MESSAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_HIDE_CHECKED_EXCEPTION_MESSAGE+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

h|[[quarkus-smallrye-graphql_section_quarkus-smallrye-graphql-ui]] [.section-name.section-level0]##link:#quarkus-smallrye-graphql_section_quarkus-smallrye-graphql-ui[SmallRye GraphQL UI configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-ui-root-path]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-ui-root-path[`quarkus.smallrye-graphql.ui.root-path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.ui.root-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The path where GraphQL UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this URL will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_UI_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_UI_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++graphql-ui+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus-smallrye-graphql-ui-always-include]] [.property-path]##link:#quarkus-smallrye-graphql_quarkus-smallrye-graphql-ui-always-include[`quarkus.smallrye-graphql.ui.always-include`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-graphql.ui.always-include+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Always include the UI. By default, this will only be included in dev and test. Setting this to true will also include the UI in Prod


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_UI_ALWAYS_INCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_UI_ALWAYS_INCLUDE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`


|===

